Adicion Ant Design y primeras funcionalidades

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.site-layout-content {
+  min-height: 280px;
+  padding: 24px;
+  background: #fff;
+}
+.logo {
+  float: left;
+  width: 130px;
+  height: 45px;
+  margin: 10px 24px 16px 0;
+  background-image: url("./alcaldiac_logo.png");
+  background-size: 130px 45px;
+  background-color: rgba(255, 255, 255, 255);
+}
+.ant-row-rtl .logo {
+  float: right;
+  margin: 16px 0 16px 24px;
+}
+  [data-theme="dark"] .site-layout-content {
+    background: #141414;
+  }
