--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,11 @@ code {
   [data-theme="dark"] .site-layout-content {
     background: #141414;
   }
+
+.ant-form-item {
+  margin-bottom: 0px !important;
+}
+
+.ant-form-vertical .ant-form-item-label, .ant-col-24.ant-form-item-label, .ant-col-xl-24.ant-form-item-label {
+  padding: 0 0 0 !important;
+}
